# schrodinger_equation

./: .gitignore  CMakeLists.txt  README.ipynb  README.md  compile_commands.json  defs.h  functions.c  main.c
.ipynb_checkpoints/: README-checkpoint.ipynb
plots_scripts/: anim1D_area.py  anim1D_normmodes.py  check_error.py  getData.py
